--- a/src/components/error-indicator/error-indicator.css
+++ b/src/components/error-indicator/error-indicator.css
@@ -1,7 +1,15 @@
 .error-indicator {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 0 auto;
-    color: tomato;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #c78f22;
+}
+
+.error-indicator img {
+  margin-bottom: 1rem;
+}
+
+.error-indicator .boom {
+  font-size: 1.7rem;
 }
