--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,92 +1,76 @@
-@keyframes ldio-rj0tcedl7bd {
-    0% { transform: rotate(0) }
-    100% { transform: rotate(360deg) }
-}
-.ldio-rj0tcedl7bd div { box-sizing: border-box!important }
-.ldio-rj0tcedl7bd > div {
-    position: absolute;
-    width: 66px;
-    height: 66px;
-    top: 67px;
-    left: 67px;
-    border-radius: 50%;
-    border: 6px solid #000;
-    border-color: #9085b6 transparent #9085b6 transparent;
-    animation: ldio-rj0tcedl7bd 2.0408163265306123s linear infinite;
+@keyframes lds-double-ring {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
-.ldio-rj0tcedl7bd > div:nth-child(2), .ldio-rj0tcedl7bd > div:nth-child(4) {
-    width: 50px;
-    height: 50px;
-    top: 75px;
-    left: 75px;
-    animation: ldio-rj0tcedl7bd 2.0408163265306123s linear infinite reverse;
+@-webkit-keyframes lds-double-ring {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-.ldio-rj0tcedl7bd > div:nth-child(2) {
-    border-color: transparent #b0350b transparent #b0350b
+@keyframes lds-double-ring_reverse {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
-.ldio-rj0tcedl7bd > div:nth-child(3) { border-color: transparent }
-.ldio-rj0tcedl7bd > div:nth-child(3) div {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: rotate(45deg);
-}
-.ldio-rj0tcedl7bd > div:nth-child(3) div:before, .ldio-rj0tcedl7bd > div:nth-child(3) div:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    top: -6px;
-    left: 24px;
-    background: #9085b6;
-    border-radius: 50%;
-    box-shadow: 0 60px 0 0 #9085b6;
-}
-.ldio-rj0tcedl7bd > div:nth-child(3) div:after {
-    left: -6px;
-    top: 24px;
-    box-shadow: 60px 0 0 0 #9085b6;
+@-webkit-keyframes lds-double-ring_reverse {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
 
-.ldio-rj0tcedl7bd > div:nth-child(4) { border-color: transparent; }
-.ldio-rj0tcedl7bd > div:nth-child(4) div {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: rotate(45deg);
+.lds-css {
+  margin: 0 auto;
 }
-.ldio-rj0tcedl7bd > div:nth-child(4) div:before, .ldio-rj0tcedl7bd > div:nth-child(4) div:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    top: -6px;
-    left: 16px;
-    background: #b0350b;
-    border-radius: 50%;
-    box-shadow: 0 44px 0 0 #b0350b;
+
+.lds-double-ring {
+  position: relative;
 }
-.ldio-rj0tcedl7bd > div:nth-child(4) div:after {
-    left: -6px;
-    top: 16px;
-    box-shadow: 44px 0 0 0 #b0350b;
+.lds-double-ring div {
+  position: absolute;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  border: 8px solid #000;
+  border-color: #3d7ec0 transparent #3d7ec0 transparent;
+  -webkit-animation: lds-double-ring 1.5s linear infinite;
+  animation: lds-double-ring 1.5s linear infinite;
 }
-.loadingio-spinner-double-ring-i4qicv2cyaq {
-    width: 200px;
-    height: 200px;
-    display: inline-block;
-    overflow: hidden;
-    background: none;
+.lds-double-ring div:nth-child(2) {
+  width: 140px;
+  height: 140px;
+  top: 30px;
+  left: 30px;
+  border-color: transparent #cc4545 transparent #cc4545;
+  -webkit-animation: lds-double-ring_reverse 1.5s linear infinite;
+  animation: lds-double-ring_reverse 1.5s linear infinite;
 }
-.ldio-rj0tcedl7bd {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform: translateZ(0) scale(1);
-    backface-visibility: hidden;
-    transform-origin: 0 0; /* see note above */
+.lds-double-ring {
+  width: 77px !important;
+  height: 77px !important;
+  -webkit-transform: translate(-38.5px, -38.5px) scale(0.385) translate(38.5px, 38.5px);
+  transform: translate(-38.5px, -38.5px) scale(0.385) translate(38.5px, 38.5px);
 }
-.ldio-rj0tcedl7bd div { box-sizing: content-box; }
